# crab

./: Cargo.toml  README.md
migrations/: 20211111074821_user.down.sql  20211111074821_user.up.sql  20211115131729_create_auth.down.sql  20211115131729_create_auth.up.sql  20211115132740_blog.down.sql  20211115132740_blog.up.sql
public/css/: main.css
src/: main.rs
src/entity/: auths.rs  blog.rs  mod.rs  prelude.rs  users.rs
src/user/: mod.rs  models.rs  views.rs
templates/: 404.html  home.html  layout.html
ui/: package-lock.json
