[package]
name = "crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
tera = "1.6.1"
dotenv = "0.15.0"
actix-web = "3"
actix-files = "0.5.0"
actix-http = "2"
env_logger = "0.8"
markx = '0.1.1'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["unstable-locales", "serde"]}
time = "0.3.5"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres", "chrono" ] }
anyhow = "1.0.45"
rand = "0.8.4"
rust-argon2 = "0.8.3"